--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,3 @@
-inherit_from: .rubocop_todo.yml
-
 # The behavior of RuboCop can be controlled via the .rubocop.yml
 # configuration file. It makes it possible to enable/disable
 # certain cops (checks) and to alter their behavior if they accept
@@ -67,6 +65,9 @@ Lint/UnexpectedBlockArity: # (new in 1.5)
 
 Lint/UnmodifiedReduceAccumulator: # (new in 1.1)
   Enabled: true
+
+Metrics/MethodLength:
+  Max: 15
 
 Style/ArgumentsForwarding: # (new in 1.1)
   Enabled: true
