--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,12 @@ Gemfile.lock
 .rvmrc
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
-# .rubocop-https?--*
+.rubocop-https?--*
 
 # End of https://www.toptal.com/developers/gitignore/api/ruby
+
+# Ignore RSpec cache
+.rspec_status
 
 # Ignore config files
 config.yml
