--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,7 @@
 # See https://docs.rubocop.org/rubocop/configuration
 
 require:
+  - rubocop-rake
   - rubocop-rspec
 
 Gemspec/DateAssignment: # (new in 1.10)
