Disable stable jruby in build matrix
It does not yet support Ruby 2.6+.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           - 2.7
           - '3.0'
           - head
-          - jruby
+          #- jruby
           - jruby-head
           - truffleruby
           - truffleruby-head
