--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,7 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         #bundler-cache: true
+    - name: Run bundle install
+      run: bundle install
     - name: Run the default task
       run: bundle exec rake
