--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           - 2.6
           - 2.7
           - '3.0'
-          - head
+          #- head
           #- jruby
           - jruby-head
           - truffleruby
