--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
-        #bundler-cache: true
+        bundler-cache: true
     - name: Run bundle install
       run: bundle install
     - name: Run the default task
