--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,7 @@ version: 2
 updates:
   - package-ecosystem: "bundler"
     directory: "/"
+    versioning-strategy: increase-if-necessary
     schedule:
       interval: "daily"
     labels:
