--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           - '3.0'
           #- head
           - truffleruby
-          - truffleruby-head
+          #- truffleruby-head
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2.3.4
