--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,7 +13,7 @@ require:
   - rubocop-rake
   - rubocop-rspec
 
-Gemspec/DateAssignment: # (new in 1.10)
+Gemspec/DeprecatedAttributeAssignment: # (new in 1.30)
   Enabled: true
 
 Layout/LineLength:
